[project]
name = "zm12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zawawa038", email = "recchilihili111@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
zm12 = "zm12:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
