[project]
name = "zm12"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zawawa038", email = "recchilihili111@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pytrends>=4.9.2",
    "tweepy>=4.16.0",
    "typer>=0.16.0",
]

[project.scripts]
zm12 = "zm12.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
