[project]
name = "zm12"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zawawa038", email = "recchilihili111@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "html5lib>=1.1",
    "matplotlib>=3.10.3",
    "pytrends>=4.9.2",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "tweepy>=4.16.0",
    "typer>=0.16.0",
]

[project.scripts]
zm12 = "zm12.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
